inventory-app/inventory-ui/inventory-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-ui-deployment
  namespace: inventory-app
  labels:
    app: inventory-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-ui
  template:
    metadata:
      namespace: inventory-app
      labels:
        app: inventory-ui
    spec:
      containers:
      - name: inventory-ui-container
        image: localhost:32000/inventory-ui:v3
        ports:
        - containerPort: 80
