inventory-app/inventory-ui/inventory-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-ui-service
  namespace: inventory-app
spec:
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30002
      port: 8091
      targetPort: 80
  selector:
    app: inventory-ui
